# memeclaw

./: .gitignore  AGENTS.md  README.md  config.example.toml  openclaw.example.json  pyproject.toml
skills/meme-claw/: SKILL.md
src/memeclaw/: __init__.py  api.py  cli.py  config.py  indexing.py  ingest.py  model.py  runtime.py  search.py  storage.py
tests/: test_memeclaw.py
